# onlinz-return-app

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
styles/: style.qss
